--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,4 +11,9 @@
         android:id="@+id/secondFragment"
         android:title="Second"/>
 
+    <item
+        android:icon="@drawable/ic_document"
+        android:id="@+id/blankFragment"
+        android:title="Home"/>
+
 </menu>
